--- a/package.json
+++ b/package.json
@@ -1,7 +1,11 @@
  {
   "name": "y",
   "version": "0.0.0",
-  "private": true,
+  "main": "index.js",
+  "scripts": {
+    "start": "node index.js",
+     
+  },
    
   "dependencies": {
      "ytdl-core" : "2.1.1"
